<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/myBlue"
        tools:context=".ActionSelection">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="189dp"
            android:layout_height="58dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="StudyBuddy"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.551" />

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="643dp"
            android:background="#B9E6EFF3"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/profilePicture"
                android:layout_width="125dp"
                android:layout_height="124dp"
                android:layout_marginLeft="145dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="155dp"
                android:background="@color/myBlue"
                app:srcCompat="@mipmap/blank_avatar_icon_foreground" />

            <TextView
                android:id="@+id/yourName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="Your Name"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputYourName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/editNameHint"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="137dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_enter_dob"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editPassword" />

            <Button
                android:id="@+id/editDateOfBirth"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="openBirthdatePicker"
                android:text="@string/register_calendar_button_date"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_of_birth" />

            <Button
                android:id="@+id/updateName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/myBlue"
                android:onClick="updateText"
                android:text="Apply" />


        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="87dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>